sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:6: error: '(' expected but identifier found.
    if plusPetit(nain+1,nain) {
       ^