sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var nain = 0
  var longueur = getNombreValeurs() - 2
  while (nain < longueur) {
    if plusPetit(nain+1,nain) {
      nain += 1
    } else {
      echange(nain,nain+1)
      nain -=1
    }
    if (nain == 0) {nain += 1}
  }
}